FIX: nickname에서  email로 회원 계정을 변경. 내가 받은 코멘트/ 피드백 기능 구현, 내가 단 코멘트/피드백 포스트 중복 해결
기존에 nickname을 가지고 ,인증 로직, 중복 로직 을 구현하였는데, email을 필드로 두도록 바꾸었습니다.
프로필 수정 시 닉네임은 수정이 가능하기 떄문에 닉네임을 수정하면 발행된 토큰이 무효화 되기 때문입니다.
emiail은 처음 가입시 카카오로부터 넘겨 받은 이메일로 이후에도 변경이 불가능 합니다.

백엔드 요청사항에 15. 코멘트 및 피드백을 단 작업물 페이지 중복 콘텐츠 발생 오류 -> 해결하였습니다.

백엔드 요청사항 19. 코멘트 관리 페이지 수정 사항 -> 해결하였습니다.

백엔드 요청사항 2.  IT/디지털 카테고링 오류 -> 해결하였습니다